--- a/3100f25.html
+++ b/3100f25.html
@@ -150,7 +150,7 @@
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/5</span><span class="course-task col-md-10"> More on computing limits by hand, including quadratic examples. If $\{a_n\}$ converges, then $\{a_n\}$ is bounded.
                                                     </span></li>
 
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/3</span><span class="course-task col-md-10"> Interlude on absolute values
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/3</span><span class="course-task col-md-10"> Interlude on absolute values. Definition of the limit. First examples of computing limits by hand.
                                                     </span></li>
 
 
