--- a/3100f25.html
+++ b/3100f25.html
@@ -119,6 +119,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 9/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #2</span><span class="col-md-2 due-date">due 9/8</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
