--- a/3100f25.html
+++ b/3100f25.html
@@ -120,6 +120,10 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
 
+
+    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #3</span><span class="col-md-2 due-date">due 9/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
