--- a/3100f25.html
+++ b/3100f25.html
@@ -152,6 +152,18 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/15 </span><span class="course-task col-md-10"> Why are the real numbers &quot;better&quot; than the rationals? $\sqrt{2}\notin \mathbb{Q}$. Completeness axiom. $\sqrt{2} \in \mathbb{R}$.
+                                                    </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/12</span><span class="course-task col-md-10"> Finishing the proof of quotient rule. Wrap up: why the heuristic of comparing leading terms works for computing limits of rational functions. Diverging to $\infty$ and to $-\infty$. Ratio test for sequences (statement).
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/10</span><span class="course-task col-md-10"> Limit laws: sum rule, difference rule, product rule, lemmas towards quotient rule.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/8</span><span class="course-task col-md-10"> If $\{a_n\}$ converges to the real number $L$, then every subsequence of $\{a_n\}$ converges to $L$. Convergence/divergence of geometric sequences. If $\{a_n\}$ is bounded above by the real number $U$, and $a_n$ converges to the real number $A$, then $A \le U$.
                                                     </span></li>
 
