--- a/3100f25.html
+++ b/3100f25.html
@@ -153,6 +153,9 @@
                                                 <ul class="course-summary-to-date">
 
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/17</span><span class="course-task col-md-10"> Statement of the intermediate value theorem (no proof). Bolzano--Weierstrass theorem: Every bounded sequence has a convergent subsequence. Proof via the notion of peak indices and monotone subsequences.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/15 </span><span class="course-task col-md-10"> Why are the real numbers &quot;better&quot; than the rationals? $\sqrt{2}\notin \mathbb{Q}$. Completeness axiom. $\sqrt{2} \in \mathbb{R}$.
                                                     </span></li>
 
