--- a/3100f25.html
+++ b/3100f25.html
@@ -151,6 +151,11 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/22</span><span class="course-task col-md-10"> Cauchy sequences: Convergent implies Cauchy. Cauchy sequences are bounded. Cauchy sequences converge. 
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/19</span><span class="course-task col-md-10"> Midterm #1.
+                                                    </span></li>
 
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/17</span><span class="course-task col-md-10"> Statement of the intermediate value theorem (no proof). Bolzano--Weierstrass theorem: Every bounded sequence has a convergent subsequence. Proof via the notion of peak indices and monotone subsequences.
