--- a/3100f25.html
+++ b/3100f25.html
@@ -151,6 +151,9 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/24</span><span class="course-task col-md-10"> Upper bounds and least upper bounds. The Least Upper Bound Property (statement only for now). Proof that $\sqrt{2}$ exists in $\mathbb{R}$ as a consequence of the LUB property. The analogue of the LUB property is not true for $\mathbb{Q}$. 
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/22</span><span class="course-task col-md-10"> Cauchy sequences: Convergent implies Cauchy. Cauchy sequences are bounded. Cauchy sequences converge. 
                                                     </span></li>
 
