--- a/research.html
+++ b/research.html
@@ -3014,6 +3014,27 @@ for almost all split-free $f$. Underlying these estimates are new statistical th
                 </li> 
 
 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Counting primes with a given primitive root, uniformly</span>  <span class="paper-author">(w/ K.(S.) Fan)</span>          </h4>
+                        <p>
+                            <span class="journal-name"><a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942">Mathematika</a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/givenprimitiveroot.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper151" aria-expanded="false" aria-controls="paper151">Abstract</a>
+                            <div class="collapse" id="paper151">
+                                <div class="well paper-abtract-content">
+                                    <p>   
+The celebrated Artin conjecture on primitive roots asserts that given any integer $g$ which is neither $-1$ nor a perfect square, there is an explicit constant $A(g)>0$ such that the number $\Pi(x;g)$ of primes $p\le x$ for which $g$ is a primitive root is asymptotically $A(g)\pi(x)$ as $x\to\infty$, where $\pi(x)$ counts the number of primes not exceeding $x$. Artin's conjecture has remained unsolved since its formulation in 1927. Nevertheless, Hooley demonstrated in 1967 that Artin's conjecture is a consequence of the Generalized Riemann Hypothesis (GRH) for Dedekind zeta functions of certain cyclotomic-Kummer extensions over $\mathbb{Q}$. In this paper, we use  GRH  to establish a uniform version of the Artin--Hooley asymptotic formula. Specifically, we prove that $\Pi(x;g) \sim A(g) x/\log{x}$ whenever $\log{x}/\log\log{2|g|} \to \infty$, i.e., whenever $x$ tends to infinity faster than any power of $\log{(2|g|)}$. Under GRH, we also show that the least prime $p_g$ possessing $g$ as a primitive root satisfies the upper bound $p_g=O(\log^{19}(2|g|))$ uniformly for all non-square $g\ne-1$. We conclude with an application to the average value of $p_g$ and a discussion of an analogue concerning the least &quot;almost-primitive&quot; root.</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
+
+
+
 
 
 
@@ -3033,15 +3054,6 @@ for almost all split-free $f$. Underlying these estimates are new statistical th
         <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
     </div>
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/TypicalElasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>        
-
-
-<li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Counting primes with a given primitive root, uniformly</span>
-        <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/givenprimitiveroot.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
 
