--- a/3100f25.html
+++ b/3100f25.html
@@ -152,7 +152,7 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
-  <li class="with-bullet"><span class="course-date col-sm-1">10/27--10/31</span><span class="course-task col-md-10"> Introduction to infinite series. Partial sums. Definition of convergence of an infinite series as convergence of the sequence of partial sums. The harmonic series diverges. Convergence behavior of geometric series. Tails of convergent series go to zero. Basic comparison test. Eventual comparison test. Limit comparison test (statement only).
+  <li class="with-bullet"><span class="course-date col-sm-1">10/27--</span><span class="course-task col-md-10"> Introduction to infinite series. Partial sums. Definition of convergence of an infinite series as convergence of the sequence of partial sums. The harmonic series diverges. Convergence behavior of geometric series. Tails of convergent series go to zero. Basic comparison test. Eventual comparison test. Limit comparison test (statement only).
                                                     </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/24</span><span class="course-task col-md-10"> Upper bounds and least upper bounds. The Least Upper Bound Property (statement only for now). Proof that $\sqrt{2}$ exists in $\mathbb{R}$ as a consequence of the LUB property. The analogue of the LUB property is not true for $\mathbb{Q}$. 
