--- a/3100f25.html
+++ b/3100f25.html
@@ -121,7 +121,6 @@
                                                 <ul class="assignment-list">
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 10/15</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
 
-    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">due 10/8</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                     
     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #4</span><span class="col-md-2 due-date">due 10/8</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                     
@@ -164,7 +163,7 @@
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/6</span><span class="course-task col-md-10"> Proof of limit comparison test. The series $\sum_{n=1}^{\infty} 1/n^p$ diverges if $p \le 1$. Statement of the integral test. Convergence of $\sum_{n=1}^{\infty} 1/n^p$ when $p>1$.
                                                     </span></li>
 
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/29--10/3</span><span class="course-task col-md-10"> Introduction to infinite series. Partial sums. Definition of convergence of an infinite series as convergence of the sequence of partial sums. The harmonic series diverges. Convergence behavior of geometric series. Tails of convergent series go to zero. Basic comparison test. Eventual comparison test. Limit comparison test (statement only).
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/29--</span><span class="course-task col-md-10"> Introduction to infinite series. Partial sums. Definition of convergence of an infinite series as convergence of the sequence of partial sums. The harmonic series diverges. Convergence behavior of geometric series. Tails of convergent series go to zero. Basic comparison test. Eventual comparison test. Limit comparison test (statement only).
                                                     </span></li>
 
 
