--- a/3100f25.html
+++ b/3100f25.html
@@ -119,6 +119,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due 10/15</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
 
                                     
