--- a/3100f25.html
+++ b/3100f25.html
@@ -158,6 +158,8 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/10</span><span class="course-task col-md-10"> Absolute convergence. Absolute convergence implies convergence. The alternating series test.
+                                                    </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/8</span><span class="course-task col-md-10"> Proof of the integral test. Examples. The $n$th term test for divergence.
                                                     </span></li>
