--- a/3100f25.html
+++ b/3100f25.html
@@ -158,7 +158,8 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/15</span><span class="course-task col-md-10">Completion of the proof of the ratio test. A mathematical magic trick and Riemann's rearrangement theorem.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/13</span><span class="course-task col-md-10"> Conditional convergence. Deciding between divergence, absolute convergence, and conditional convergence. The ratio test for series.
                                                     </span></li>
 
