--- a/research.html
+++ b/research.html
@@ -3034,7 +3034,25 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
                 </li> 
 
 
-
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Elementary abelian Sylow subgroups of the
+                            multiplicative group</span>  <span class="paper-author">(w/ S. Morales and G. Polanco)</span>          </h4>
+                        <p>
+                            <span class="journal-name"><a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942">Mathematika</a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/noncyclicfollowup.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper152" aria-expanded="false" aria-controls="paper152">Abstract</a>
+                            <div class="collapse" id="paper152">
+                                <div class="well paper-abtract-content">
+                                    <p>   Erdős and Pomerance have shown that $\varphi(n)$ typically has about $\frac{1}{2}(\log\log{n})^2$ distinct prime factors. More precisely, $\omega(\varphi(n))$ has normal order $\frac{1}{2}(\log\log{n})^2$. Since $\varphi(n)$ is the size of the multiplicative group $(\Z/n\Z)^{\times}$, this result also gives the normal number of Sylow subgroups of $(\Z/n\Z)^{\times}$. Recently, Pollack considered specifically noncyclic Sylow subgroups of $(\Z/n\Z)^{\times}$, showing that the count of those has normal order $\log\log{n}/\log\log\log{n}$. We prove that the count of noncyclic Sylow subgroups that are elementary abelian of a fixed rank $k\ge 2$ has normal order $\frac{1}{k(k-1)} \log\log{n}/\log\log\log{n}$. So for example, (typically) among the primes $p$ for which the $p$-primary component of $(\Z/n\Z)^{\times}$ is noncyclic, this component is $\Z/p\Z \oplus \Z/p\Z$ about half the time. Additionally, we show that the count of $p$ for which the $p$-Sylow subgroup of $(\Z/n\Z)^{\times}$ is not elementary abelian has normal order $2\sqrt{\pi} \sqrt{\log\log{n}}/\log\log\log{n}$.
+</p>
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li> 
 
 
 
@@ -3059,11 +3077,10 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
 
 <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
-        <h4> <span class="paper-title">Elementary abelian Sylow subgroups of the
-multiplicative group</span>
-        <span class="paper-author">(w/ S. Morales and G. Polanco)</span></h4>
+        <h4> <span class="paper-title">The maximal order of the shifted-prime divisor function</span>
+        <span class="paper-author">(w/ K. (S.) Fan)</span></h4>
     </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/noncyclicfollowup.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/maxomegastar.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
 
