--- a/research.html
+++ b/research.html
@@ -3039,7 +3039,7 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
                         <h4>    <span class="paper-title">Elementary abelian Sylow subgroups of the
                             multiplicative group</span>  <span class="paper-author">(w/ S. Morales and G. Polanco)</span>          </h4>
                         <p>
-                            <span class="journal-name"><a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942">Mathematika</a> (<span class="paper-year">to appear</span>)</p>
+                            <span class="journal-name"><a href="https://www.sciencedirect.com/journal/journal-of-number-theory">J. Number Theory</a> (<span class="paper-year">to appear</span>)</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/noncyclicfollowup.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
