--- a/3100f25.html
+++ b/3100f25.html
@@ -158,6 +158,12 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/20</span><span class="course-task col-md-10"> Power series. Calculation of the domain of convergence in specific examples. Statement that the domain of convergence is always an &quot;interval&quot; centered at $0$, possibly $\{0\}$ or $(-\infty,\infty)$. The Key Lemma: If a power series converges at $x=r$, then it converges absolutely for all $x$ with $|x| < |r|$. 
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/17</span><span class="course-task col-md-10"> Midterm #2.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/15</span><span class="course-task col-md-10">Completion of the proof of the ratio test. A mathematical magic trick and Riemann's rearrangement theorem.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/13</span><span class="course-task col-md-10"> Conditional convergence. Deciding between divergence, absolute convergence, and conditional convergence. The ratio test for series.
