--- a/3100f25.html
+++ b/3100f25.html
@@ -160,6 +160,12 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/24</span><span class="course-task col-md-10"> Sequential criterion for continuity. Continuity of $f(x)=2x+7$ at $x=5$, via $\epsilon$-$\delta$. Continuity on a domain (vs a point). Continuity of $2x^2+1$ (on all of $\mathbb{R}$). Start of discussion of generating continuous functions, including the observation that constant functions are continuous.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/22</span><span class="course-task col-md-10"> Description of the Domain of Convergence of an arbitrary power series (modulo a homework problem). Definition of continuity at a point. Definition of sequential continuity at a point. Statement of sequential criterion for continuity: $f\colon D\to\mathbb{R}$ is continuous at $x_0 \in D$ if and only if $f$ is sequentially continuous at $x_0$. Applcation of sequential criterion to proving $2x^2+1$ is continuous at every point of $\mathbb{R}$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/20</span><span class="course-task col-md-10"> Power series. Calculation of the domain of convergence in specific examples. Statement that the domain of convergence is always an &quot;interval&quot; centered at $0$, possibly $\{0\}$ or $(-\infty,\infty)$. The Key Lemma: If a power series converges at $x=r$, then it converges absolutely for all $x$ with $|x| < |r|$. 
                                                     </span></li>
 
