--- a/3100f25.html
+++ b/3100f25.html
@@ -119,6 +119,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+
+                                                    
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 11/3</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Ross's book: Elementary Analysis (for 3rd segment of the course)</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
