--- a/3100f25.html
+++ b/3100f25.html
@@ -165,6 +165,13 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/29</span><span class="course-task col-md-10"> Other examples of continuous functions (exponential functions, trig functions, functions defined by power series on their open interval of convergence). Statement of Intermediate Value Theorem. Examples. Reduction of IVT to IVT version 0. Sketch of proof of IVT version 0 (details Monday!).
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/27</span><span class="course-task col-md-10"> $f(x)=x$ is continuous. Sums and products of continuous functions are continuous. Quotients of continuous functions are continuous. Corollary: Polynomials and rational functions are continuous. If $f(x)$ is continuous, so is $|f(x)|$: statement of more general rule regarding compositions of continuous functions. 
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/24</span><span class="course-task col-md-10"> Sequential criterion for continuity. Continuity of $f(x)=2x+7$ at $x=5$, via $\epsilon$-$\delta$. Continuity on a domain (vs a point). Continuity of $2x^2+1$ (on all of $\mathbb{R}$). Start of discussion of generating continuous functions, including the observation that constant functions are continuous.
                                                     </span></li>
 
