--- a/3100f25.html
+++ b/3100f25.html
@@ -121,6 +121,8 @@
                                                 <ul class="assignment-list">
 
 
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due 11/14</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+
                                                     
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 11/3</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
 
