--- a/3100f25.html
+++ b/3100f25.html
@@ -167,6 +167,22 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/7</span><span class="course-task col-md-10"> Limit laws. Definition of the derivative. 
+                                                        Computation of $f'(2)$ for $f(x) = x^2$. Continuity
+                                                        implies differentiability. Sum rule for derivatives. </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/5</span><span class="course-task col-md-10"> Dotting the i's and crossing the t's on the Max Value Theorem. Definition of the functional limit (see section 20 in Ross). Examples.                                                        
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/3</span><span class="course-task col-md-10"> Proof of IVT version 0. Statement of Max Value Theorem. 
+                                                        Two lemmas towards the max value theorem. If $f$ is continuous on $[a,b]$, its image is bounded above, and the least upper bound of the image is an element of the image.
+                                                    </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/31</span><span class="course-task col-md-10"> Other examples of continuous functions (exponential functions, trig functions, functions defined by power series on their open interval of convergence). Statement of Intermediate Value Theorem. Examples. Reduction of IVT to IVT version 0. Sketch of proof of IVT version 0 (details Monday!).
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/29</span><span class="course-task col-md-10"> Other examples of continuous functions (exponential functions, trig functions, functions defined by power series on their open interval of convergence). Statement of Intermediate Value Theorem. Examples. Reduction of IVT to IVT version 0. Sketch of proof of IVT version 0 (details Monday!).
                                                     </span></li>
 
