--- a/3100f25.html
+++ b/3100f25.html
@@ -167,6 +167,8 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/10</span><span class="course-task col-md-10"> Constant rule, product rule, quotient rule (for derivatives). An intuitive/informal argument for the chain rule. </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/7</span><span class="course-task col-md-10"> Limit laws. Definition of the derivative. 
                                                         Computation of $f'(2)$ for $f(x) = x^2$. Continuity
                                                         implies differentiability. Sum rule for derivatives. </span></li>
