--- a/3100f25.html
+++ b/3100f25.html
@@ -121,7 +121,7 @@
                                                 <ul class="assignment-list">
 
 
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due 11/14</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due <del>11/14</del> 11/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
 
                                                     
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 11/3</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -167,6 +167,9 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/12</span><span class="course-task col-md-10"> Rigorous proof of the chain rule. Derivatives of constants and derivatives of $x^n$. Statement: If $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(X_0)=0$. Start of proof.</span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/10</span><span class="course-task col-md-10"> Constant rule, product rule, quotient rule (for derivatives). An intuitive/informal argument for the chain rule. </span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/7</span><span class="course-task col-md-10"> Limit laws. Definition of the derivative. 
