--- a/3100f25.html
+++ b/3100f25.html
@@ -121,6 +121,9 @@
                                                 <ul class="assignment-list">
 
 
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due <del>11/14</del> 11/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
 
                                                     
