--- a/research.html
+++ b/research.html
@@ -3317,7 +3317,7 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">How nonunique is your factorization?</span>
                                                             </h4>
-                                                            <p><span>AMS Eastern Sectional Meeting, April 2025. See also: longer versions for the <a href="elasticity-integers2.pdf" target="_blank">2025 Integers conference</a> and <a href="elasticity-waterloo.pdf">Waterloo number theory seminar</a> (June 2025).
+                                                            <p><span>AMS Eastern Sectional Meeting, April 2025. See also: longer versions for the <a href="elasticity-integers2.pdf" target="_blank">2025 Integers conference</a> and <a href="elasticity-purdue.pdf">Purdue number theory seminar</a> (October 2025).
                                                             </span></p>
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-CT-Elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
