--- a/3100f25.html
+++ b/3100f25.html
@@ -168,7 +168,19 @@
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
 
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/12</span><span class="course-task col-md-10"> Rigorous proof of the chain rule. Derivatives of constants and derivatives of $x^n$. Statement: If $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(X_0)=0$. Start of proof.</span></li>
+
+                                                    
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">12/1</span><span class="course-task col-md-10"> Examples of Taylor series: $e^x$, $\sin x$, $\cos x$. An infinitely differentiable function not represented by its Taylor series near $0$. Statement of Taylor's theorem. Approximating $\sin x$ by $x-\frac{x^3}{3!} + \frac{x^5}{5!}$ near $0$.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/24</span><span class="course-task col-md-10"> More examples of differentiating and integrating power series. If $f$ is represented by a power series on an interval near $0$, then $f$ is infinitely differentiable there, and the power series is $\sum_{n=0}^{\infty} \frac{f^{(n)}(0)}{n!} x^n$. </span></li>
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/19</span><span class="course-task col-md-10"> Closed forms of power series. Examples from the geometric series formula. Statements of rules for differentiating and integrating power series. First examples. </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/17</span><span class="course-task col-md-10"> Competion of the proof that if $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(x_0)=0$. Rolle's theorem. Mean Value Theorem. If $f'=0$ on $(a,b)$, then $f$ is constant on $(a,b)$.</span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/12</span><span class="course-task col-md-10"> Rigorous proof of the chain rule. Derivatives of constants and derivatives of $x^n$. Statement: If $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(x_0)=0$. Start of proof.</span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/10</span><span class="course-task col-md-10"> Constant rule, product rule, quotient rule (for derivatives). An intuitive/informal argument for the chain rule. </span></li>
 
