--- a/3100f25.html
+++ b/3100f25.html
@@ -181,7 +181,7 @@
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/19</span><span class="course-task col-md-10"> Closed forms of power series. Examples from the geometric series formula. Statements of rules for differentiating and integrating power series. First examples. </span></li>
 
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/17</span><span class="course-task col-md-10"> Competion of the proof that if $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(x_0)=0$. Rolle's theorem. Mean Value Theorem. If $f'=0$ on $(a,b)$, then $f$ is constant on $(a,b)$.</span></li>
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">11/17</span><span class="course-task col-md-10"> Completion of the proof that if $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(x_0)=0$. Rolle's theorem. Mean Value Theorem. If $f'=0$ on $(a,b)$, then $f$ is constant on $(a,b)$.</span></li>
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">11/12</span><span class="course-task col-md-10"> Rigorous proof of the chain rule. Derivatives of constants and derivatives of $x^n$. Statement: If $f$ is differentiable on $(a,b)$ and has a max or min on $(a,b)$ at $x=x_0 \in (a,b)$, then $f'(x_0)=0$. Start of proof.</span></li>
 
