--- a/3100f25.html
+++ b/3100f25.html
@@ -120,6 +120,8 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
 
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f25/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
