--- a/3100f25.html
+++ b/3100f25.html
@@ -174,6 +174,8 @@
                                                 <ul class="course-summary-to-date">
 
 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">12/2</span><span class="course-task col-md-10"> Using Taylor's theorem to prove $\sin x$, $\cos x$, and $e^x$ are represented by their Taylor series everywhere. Proof of Taylor's theorem when $n=0$ and $n=1$. Exercise: Generalize!
+                                                    </span></li>
                                                     
                                                     <li class="with-bullet"><span class="course-date col-sm-1">12/1</span><span class="course-task col-md-10"> Examples of Taylor series: $e^x$, $\sin x$, $\cos x$. An infinitely differentiable function not represented by its Taylor series near $0$. Statement of Taylor's theorem. Approximating $\sin x$ by $x-\frac{x^3}{3!} + \frac{x^5}{5!}$ near $0$.
                                                     </span></li>
