--- a/3100f25.html
+++ b/3100f25.html
@@ -372,7 +372,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                     <li class="with-bullet">Midterm #1: Friday, September 19</li>
                                                     <li class="with-bullet">Midterm #2: Friday, October 17</li>
                                                     <li class="with-bullet">Midterm #3: Friday, November 21</li>
-                                                    <li class="with-bullet">Final exam: Wed, December 10, 12:00-3 PM (usual classroom)</li>
+                                                    <li class="with-bullet">Final exam: Wed, December 10, 12:00-3 PM (confirmed to be in our usual classroom)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
                                             </div>
