--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="3100f25.html">MATH 3100/3100H</a></li>
+                                              <li><a href="4000s26.html">MATH 4000/6000</a></li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -141,7 +141,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li class="with-bullet"><a href="3100f25.html">MATH 3100/3100H: Introduction to Mathematical Analysis</a></li>
+                                                    <li class="with-bullet"><a href="4000s26.html">MATH 4000/6000: Modern Algebra I</a></li>
                                                   </ul>
                                             </div>
                                         </div>
