--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Teaching (Fall 2025)</h6>
+                                                <h6>Teaching (Spring 2026)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
