--- a/research.html
+++ b/research.html
@@ -3084,6 +3084,14 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
 </li>        
 
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">An almost-always measure of the failure of unique factorization</span>
+        <span class="paper-author">(w/ E. Treviño)</span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/concentration_elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
+
 
 
 
