--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                                         <a href="#" class="menu-has-child">
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
-                                  <ul>
+                                  <!-- <ul>
                                               <li><a href="4000s26.html">MATH 4000/6000</a></li>
-                                            </ul>
+                                            </ul> -->
                                     </li>
                                 </ul>
                                 <!--end menu-->
@@ -140,9 +140,10 @@
                                                 <h6>Teaching (Spring 2026)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <ul>
+                                                <!-- <ul>
                                                     <li class="with-bullet"><a href="4000s26.html">MATH 4000/6000: Modern Algebra I</a></li>
-                                                  </ul>
+                                                  </ul> -->
+                                                  <p> In Spring 2026, I am concentrating on graduate program administration. </p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
