add OK proof paper

--- a/research.html
+++ b/research.html
@@ -3089,6 +3089,13 @@ The celebrated Artin conjecture on primitive roots asserts that given any intege
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/concentration_elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Rings of integers are Dedekind domains: A short and simple proof</span>
+        <span class="paper-author">(w/ T. All and C. Lane)</span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/OKproof.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
 
 
 
