--- a/research.html
+++ b/research.html
@@ -2925,7 +2925,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>  <span class="paper-author">(w/ A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.cambridge.org/core/journals/proceedings-of-the-edinburgh-mathematical-society"><span class="journal-name">Proc. Edinburgh Math. Soc.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.cambridge.org/core/journals/proceedings-of-the-edinburgh-mathematical-society"><span class="journal-name">Proc. Edinburgh Math. Soc.</span></a> 68 (<span class="paper-year">2025</span>), 712--730</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
