--- a/research.html
+++ b/research.html
@@ -2968,7 +2968,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
 counterexample to Hasse's local-global
 principle</span>  <span class="paper-author">(w/ D.B. Leep and D.B. Shapiro)</span>          </h4>
                         <p>
-                            <a href="https://maa.org/publication/the-american-mathematical-monthly/"><span class="journal-name">Amer. Math. Monthly</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://maa.org/publication/the-american-mathematical-monthly/"><span class="journal-name">Amer. Math. Monthly</span></a> 132 (<span class="paper-year">2025</span>), 839--847</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/LGP-Monthly.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
