--- a/research.html
+++ b/research.html
@@ -3015,7 +3015,7 @@ for almost all split-free $f$. Underlying these estimates are new statistical th
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Counting primes with a given primitive root, uniformly</span>  <span class="paper-author">(w/ K.(S.) Fan)</span>          </h4>
                         <p>
-                            <span class="journal-name"><a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942">Mathematika</a> (<span class="paper-year">to appear</span>)</p>
+                            <span class="journal-name"><a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942">Mathematika</a> 71 (<span class="paper-year">2025</span>), article e70055, 30 pages</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/givenprimitiveroot.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
